--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "framer": "^2.3.0",
     "motion": "^10.15.5",
     "next": "13.1.6",
@@ -23,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.2",
+    "react-query": "^3.39.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
