--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.7"
   }
 }
