--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
+    "@next-auth/mongodb-adapter": "^1.1.1",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.6",
+    "@prisma/client": "^4.11.0",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "framer": "^2.3.0",
+    "mongodb": "^4.14.0",
     "motion": "^10.15.5",
     "next": "13.1.6",
+    "next-auth": "^4.20.1",
+    "nodemailer": "^6.9.1",
     "popmotion": "^11.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
