--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
@@ -21,6 +22,7 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "framer": "^2.3.0",
+    "graphql": "^16.6.0",
     "mongodb": "^4.14.0",
     "motion": "^10.15.5",
     "next": "13.1.6",
