--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.3.4",
     "framer": "^2.3.0",
     "graphql": "^16.6.0",
+    "lodash": "^4.17.21",
     "mongodb": "^4.14.0",
     "motion": "^10.15.5",
     "next": "13.1.6",
@@ -34,9 +35,11 @@
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.2",
     "react-query": "^3.39.3",
+    "swr": "^2.1.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
