--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_YOUTUBE_API=AIzaSyCknKoyqvXYRX4j4M_2EZQCWml6FogvPGA
 
 NEXT_PUBLIC_EMAIL_SERVER_USER=apikey
-NEXT_PUBLIC_EMAIL_SERVER_PASSWORD=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
+NEXT_PUBLIC_EMAIL_SERVER_PASSWORD=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
 NEXT_PUBLIC_EMAIL_SERVER_HOST=smtp.sendgrid.net
 NEXT_PUBLIC_EMAIL_SERVER_PORT=587
 NEXT_PUBLIC_EMAIL_FROM=mongodbmysql@gmail.com
